--- a/projectStack/src/app/dashboard.module/dashboard/dashboard.component.html
+++ b/projectStack/src/app/dashboard.module/dashboard/dashboard.component.html
@@ -6,7 +6,7 @@
     <h4 class="color-black mt-3">
       <span class="font-weight-bold ">Welcome Back,</span>
       <span class="font-weight-normal text-capitalize">
-        {{user.firstName}}
+        {{user?.firstName}}
       </span>
     </h4>
 </div>
