--- a/projectStack/src/app/profile/member/member.component.html
+++ b/projectStack/src/app/profile/member/member.component.html
@@ -2,16 +2,51 @@
 <div class="memberContainer">
   <div class="backdrop"></div>
   <div class="userImageNameBlock d-flex flex-column align-items-center">
+    <ng-container *ngIf="!loading">
       <div class="userImage" [style.backgroundImage]="backgroundImageStyle">
 
       </div>
-      <h5 class="color-black font-weight-bold mt-2 mb-0">
-        {{Username}}
-      </h5>
-      <small class="color-black" style="opacity: 0.8;">
-       {{member?.headline}}
-      </small>
-      <button mat-button><small>Invite {{member?.firstName}} To Your Project</small></button>
+        <h5 class="color-black font-weight-bold mt-2 mb-0">
+          {{Username}}
+        </h5>
+        <small class="color-black" style="opacity: 0.8;">
+         {{member?.headline}}
+        </small>
+      </ng-container>
+      <ng-container *ngIf="loading">
+        <div class="item">
+          <ngx-skeleton-loader count="1" [theme]="{height:'85px', width:'85px', margin:'0.7rem auto', display:'block', boxShadow: '0px 0px 8px 1px rgba(0,0,0,0.07)'}" appearance="circle" animation="progress"> </ngx-skeleton-loader>
+          <ngx-skeleton-loader count="1" [theme]="{width:'200px', height:'20px', margin:'0 auto', display:'block', boxShadow: '0px 0px 8px 1px rgba(0,0,0,0.07)'}" animation="progress"> </ngx-skeleton-loader>
+          <ngx-skeleton-loader count="1" [theme]="{width:'100px', height:'15px', margin:'0.4rem auto', display:'block', boxShadow: '0px 0px 8px 1px rgba(0,0,0,0.07)'}" animation="progress"> </ngx-skeleton-loader>
+        </div>
+      </ng-container>
+      <div class="d-flex mt-3">
+        <custom-button
+        color="primary"
+        [passedClass]="{'mx-2':true}"
+        [loading]="loading"
+        [rounded]="true"
+        [long]="true"
+        [stroked]="false"
+        [thin]="true">
+        <small>
+          Invite To Project
+        </small>
+        </custom-button>
+        <custom-button
+        color="primary"
+        [passedClass]="{'mx-2':true}"
+        [loading]="loading"
+        [rounded]="true"
+        [long]="true"
+        [stroked]="true"
+        [thin]="true">
+        <small>
+          Share Profile
+        </small>
+        </custom-button>
+
+      </div>
   </div>
   <div class="d-flex w-90 justify-content-center mx-auto">
 
@@ -21,9 +56,18 @@
         <div class="label mb-2">
           Summary
         </div>
-        <small class="color-black">
-        {{member?.summery}}
-        </small>
+        <ng-container *ngIf="!loading">
+          <small class="color-black">
+            {{member?.summery}}
+          </small>
+        </ng-container>
+        <ng-container *ngIf="loading">
+          <div class="mt-4">
+            <ngx-skeleton-loader count="1" [theme]="{width:'80%', height:'20px', margin:'0.4rem 0', display:'block', boxShadow: '0px 0px 8px 1px rgba(0,0,0,0.01)'}" animation="progress"> </ngx-skeleton-loader>
+            <ngx-skeleton-loader count="1" [theme]="{width:'80%', height:'20px', margin:'0.4rem 0', display:'block', boxShadow: '0px 0px 8px 1px rgba(0,0,0,0.01)'}" animation="progress"> </ngx-skeleton-loader>
+            <ngx-skeleton-loader count="1" [theme]="{width:'60%', height:'20px', margin:'0.4rem 0', display:'block', boxShadow: '0px 0px 8px 1px rgba(0,0,0,0.01)'}" animation="progress"> </ngx-skeleton-loader>
+          </div>
+        </ng-container>
       </div>
 
       <div class="w-100 rawBlock mt-4">
@@ -31,9 +75,19 @@
           Interests
         </div>
         <div class="d-flex flex-wrap justify-content-center">
-          <div class="tag" *ngFor="let interestDesc of member?.interests">
-            {{interestDesc}}
-          </div>
+          <ng-container *ngIf="!loading">
+            <div class="tag" *ngFor="let interestDesc of member?.interests">
+              {{interestDesc}}
+            </div>
+          </ng-container>
+          <ng-container *ngIf="loading">
+            <ngx-skeleton-loader count="1" [theme]="{width:'100px', height:'20px', borderRadius: '17px', margin:'0.4rem', display:'block', boxShadow: '0px 0px 8px 1px rgba(0,0,0,0.01)'}" animation="progress"> </ngx-skeleton-loader>
+            <ngx-skeleton-loader count="1" [theme]="{width:'80px', height:'20px', borderRadius: '17px', margin:'0.4rem', display:'block', boxShadow: '0px 0px 8px 1px rgba(0,0,0,0.01)'}" animation="progress"> </ngx-skeleton-loader>
+            <ngx-skeleton-loader count="1" [theme]="{width:'80px', height:'20px', borderRadius: '17px', margin:'0.4rem', display:'block', boxShadow: '0px 0px 8px 1px rgba(0,0,0,0.01)'}" animation="progress"> </ngx-skeleton-loader>
+            <ngx-skeleton-loader count="1" [theme]="{width:'80px', height:'20px', borderRadius: '17px', margin:'0.4rem', display:'block', boxShadow: '0px 0px 8px 1px rgba(0,0,0,0.01)'}" animation="progress"> </ngx-skeleton-loader>
+            <ngx-skeleton-loader count="1" [theme]="{width:'90px', height:'20px', borderRadius: '17px', margin:'0.4rem', display:'block', boxShadow: '0px 0px 8px 1px rgba(0,0,0,0.01)'}" animation="progress"> </ngx-skeleton-loader>
+            <ngx-skeleton-loader count="1" [theme]="{width:'120px', height:'20px', borderRadius: '17px', margin:'0.4rem', display:'block', boxShadow: '0px 0px 8px 1px rgba(0,0,0,0.01)'}" animation="progress"> </ngx-skeleton-loader>
+          </ng-container>
         </div>
       </div>
       <div class="w-100 rawBlock mt-4">
@@ -41,28 +95,7 @@
           Projects
         </div>
         <div  class="d-flex flex-wrap justify-content-center">
-          <div class="projectBlock m-2">
-            <div class="projectImage">
-              T
-            </div>
-            <h6 class="color-black mt-1 mb-0">Trash Project</h6>
-            <small class="color-block" style="opacity: 0.8;">
-              Where Trash Is Acually
-            </small>
-          </div>
-          <div class="projectBlock m-2">
-            <div class="projectImage">
-              T
-            </div>
-            <h6 class="color-black mt-1 mb-0">Trash Project</h6>
-            <small class="color-block" style="opacity: 0.8;">
-              Where Trash Is Acually
-            </small>
-          </div>
-          <div class="projectBlock m-2">
-            <div class="projectImage">
-              T
-            </div>
+          <div class="projectBlock m-2 px-2 py-3">
             <h6 class="color-black mt-1 mb-0">Trash Project</h6>
             <small class="color-block" style="opacity: 0.8;">
               Where Trash Is Acually
@@ -80,20 +113,60 @@
         </div>
         <table class="infoTable">
           <tr>
-            <th>University</th>
-            <td>{{staticData.getUniversityNameByID(member?.university)}}</td>
+            <ng-container *ngIf="!loading">
+              <th>University</th>
+              <td>{{staticData.getUniversityNameByID(member?.university)}}</td>
+            </ng-container>
+            <ng-container *ngIf="loading">
+              <td>
+                <ngx-skeleton-loader count="1" [theme]="{width:'80px', height:'20px', margin:'0.4rem 0', display:'block', boxShadow: '0px 0px 8px 1px rgba(0,0,0,0.01)'}" animation="progress"> </ngx-skeleton-loader>
+              </td>
+              <td>
+                <ngx-skeleton-loader count="1" [theme]="{width:'170px', height:'20px', margin:'0.4rem 0', display:'block', boxShadow: '0px 0px 8px 1px rgba(0,0,0,0.01)'}" animation="progress"> </ngx-skeleton-loader>
+              </td>
+            </ng-container>
           </tr>
           <tr>
+          <ng-container *ngIf="!loading">
             <th>Department</th>
             <td>{{staticData.getDepartmentNameByID(member?.department)}}</td>
+          </ng-container>
+          <ng-container *ngIf="loading">
+            <td>
+              <ngx-skeleton-loader count="1" [theme]="{width:'100px', height:'20px', margin:'0.4rem 0', display:'block', boxShadow: '0px 0px 8px 1px rgba(0,0,0,0.01)'}" animation="progress"> </ngx-skeleton-loader>
+            </td>
+            <td>
+              <ngx-skeleton-loader count="1" [theme]="{width:'170px', height:'20px', margin:'0.4rem 0', display:'block', boxShadow: '0px 0px 8px 1px rgba(0,0,0,0.01)'}" animation="progress"> </ngx-skeleton-loader>
+            </td>
+          </ng-container>
           </tr>
           <tr>
-            <th>Graduation Year</th>
-            <td>{{member?.yearOfGrad}}</td>
+            <ng-container *ngIf="!loading">
+              <th>Graduation Year</th>
+              <td>{{member?.yearOfGrad}}</td>
+            </ng-container>
+            <ng-container *ngIf="loading">
+              <td>
+                <ngx-skeleton-loader count="1" [theme]="{width:'120px', height:'20px', margin:'0.4rem 0', display:'block', boxShadow: '0px 0px 8px 1px rgba(0,0,0,0.01)'}" animation="progress"> </ngx-skeleton-loader>
+              </td>
+              <td>
+                <ngx-skeleton-loader count="1" [theme]="{width:'200px', height:'20px', margin:'0.4rem 0', display:'block', boxShadow: '0px 0px 8px 1px rgba(0,0,0,0.01)'}" animation="progress"> </ngx-skeleton-loader>
+              </td>
+            </ng-container>
           </tr>
           <tr>
-            <th>Email</th>
-            <td>{{member?.email}}</td>
+            <ng-container *ngIf="!loading">
+              <th>Email</th>
+              <td>{{member?.email}}</td>
+            </ng-container>
+            <ng-container *ngIf="loading">
+              <td>
+                <ngx-skeleton-loader count="1" [theme]="{width:'80px', height:'20px', margin:'0.4rem 0', display:'block', boxShadow: '0px 0px 8px 1px rgba(0,0,0,0.01)'}" animation="progress"> </ngx-skeleton-loader>
+              </td>
+              <td>
+                <ngx-skeleton-loader count="1" [theme]="{width:'170px', height:'20px', margin:'0.4rem 0', display:'block', boxShadow: '0px 0px 8px 1px rgba(0,0,0,0.01)'}" animation="progress"> </ngx-skeleton-loader>
+              </td>
+            </ng-container>
           </tr>
         </table>
       </div>
@@ -103,9 +176,22 @@
           Top Skills
         </div>
         <div class="d-flex flex-wrap justify-content-center">
-          <div class="tag" *ngFor="let skillID of member?.skills">
-            {{staticData.getSkillNameByID(skillID)}}
-          </div>
+          <ng-container *ngIf="!loading">
+            <div class="tag" *ngFor="let skillID of member?.skills">
+              {{staticData.getSkillNameByID(skillID)}}
+            </div>
+          </ng-container>
+          <ng-container *ngIf="loading">
+            <ngx-skeleton-loader count="1" [theme]="{width:'100px', height:'20px', borderRadius: '17px', margin:'0.4rem', display:'block', boxShadow: '0px 0px 8px 1px rgba(0,0,0,0.01)'}" animation="progress"> </ngx-skeleton-loader>
+            <ngx-skeleton-loader count="1" [theme]="{width:'80px', height:'20px', borderRadius: '17px', margin:'0.4rem', display:'block', boxShadow: '0px 0px 8px 1px rgba(0,0,0,0.01)'}" animation="progress"> </ngx-skeleton-loader>
+            <ngx-skeleton-loader count="1" [theme]="{width:'80px', height:'20px', borderRadius: '17px', margin:'0.4rem', display:'block', boxShadow: '0px 0px 8px 1px rgba(0,0,0,0.01)'}" animation="progress"> </ngx-skeleton-loader>
+            <ngx-skeleton-loader count="1" [theme]="{width:'80px', height:'20px', borderRadius: '17px', margin:'0.4rem', display:'block', boxShadow: '0px 0px 8px 1px rgba(0,0,0,0.01)'}" animation="progress"> </ngx-skeleton-loader>
+            <ngx-skeleton-loader count="1" [theme]="{width:'90px', height:'20px', borderRadius: '17px', margin:'0.4rem', display:'block', boxShadow: '0px 0px 8px 1px rgba(0,0,0,0.01)'}" animation="progress"> </ngx-skeleton-loader>
+            <ngx-skeleton-loader count="1" [theme]="{width:'120px', height:'20px', borderRadius: '17px', margin:'0.4rem', display:'block', boxShadow: '0px 0px 8px 1px rgba(0,0,0,0.01)'}" animation="progress"> </ngx-skeleton-loader>
+            <ngx-skeleton-loader count="1" [theme]="{width:'100px', height:'20px', borderRadius: '17px', margin:'0.4rem', display:'block', boxShadow: '0px 0px 8px 1px rgba(0,0,0,0.01)'}" animation="progress"> </ngx-skeleton-loader>
+            <ngx-skeleton-loader count="1" [theme]="{width:'80px', height:'20px', borderRadius: '17px', margin:'0.4rem', display:'block', boxShadow: '0px 0px 8px 1px rgba(0,0,0,0.01)'}" animation="progress"> </ngx-skeleton-loader>            <ngx-skeleton-loader count="1" [theme]="{width:'100px', height:'27px', borderRadius: '17px', margin:'0.4rem', display:'block', boxShadow: '0px 0px 8px 1px rgba(0,0,0,0.01)'}" animation="progress"> </ngx-skeleton-loader>
+            <ngx-skeleton-loader count="1" [theme]="{width:'80px', height:'20px', borderRadius: '17px', margin:'0.4rem', display:'block', boxShadow: '0px 0px 8px 1px rgba(0,0,0,0.01)'}" animation="progress"> </ngx-skeleton-loader>
+          </ng-container>
         </div>
       </div>
     </div>
