--- a/projectStack/src/app/shared/header-menu/submenu/submenu.component.html
+++ b/projectStack/src/app/shared/header-menu/submenu/submenu.component.html
@@ -1,1 +1,11 @@
-<p>submenu works!</p>
+<div class="d-flex flex-wrap p-3 justify-content-center">
+    <div class="menuItem mx-2 my-1">
+
+    </div>
+    <div class="menuItem mx-2 my-1">
+
+    </div>
+    <div class="menuItem mx-2 my-1">
+
+    </div>
+</div>
