--- a/projectStack/src/app/profile/member/member.component.scss
+++ b/projectStack/src/app/profile/member/member.component.scss
@@ -33,7 +33,14 @@
 .projectBlock{
   display: flex;
   flex-direction: column;
-  align-items:center;
+  border:solid 1px rgba($color: #e25252, $alpha: 0.3);
+  background-color: #e25252;
+  width: 80%;
+  color:#fff;
+  height:80px;
+  border-radius: 7px;
+  box-shadow: 0px 0px 9px 0px rgba($color: #e25252, $alpha: 0.2);
+
 }
 
 .projectImage{
