--- a/projectStack/src/app/shared/header-menu/header-menu.component.html
+++ b/projectStack/src/app/shared/header-menu/header-menu.component.html
@@ -5,11 +5,10 @@
   <h6 class="text-center m-0 mt-3">Ibrahim Rahhal</h6>
   <small class="d-block text-center" style="opacity: 0.7;">Full Stack Engineer</small>
   <section class="mt-4">
-    <h6>Notifications</h6>
+    <small>Notifications</small>
     <app-notifications-section></app-notifications-section>
   </section>
-  <section class="mt-4">
-    <h6>Menu</h6>
+  <section class="mt-5">
     <app-submenu></app-submenu>
   </section>
 
