--- a/projectStack/src/app/shared/header-menu/notifications-section/notifications-section.component.html
+++ b/projectStack/src/app/shared/header-menu/notifications-section/notifications-section.component.html
@@ -1,12 +1,5 @@
-<div class="mt-3">
+<div class="mt-3 section">
   <ng-container *ngIf="notifications.length == 0">
-    <img
-  src="./assets/tick.svg"
-  height="40px"
-  width="40px"
-  class="d-block mx-auto"
-  style="opacity: 0.7;"
-  >
   <small class="d-block text-center font-weight-light mt-2" style="opacity: 0.7;">You're All Cought up</small>
   </ng-container>
   <ng-container *ngIf="notifications.length > 0">
