--- a/projectStack/src/app/shared/header/header.component.html
+++ b/projectStack/src/app/shared/header/header.component.html
@@ -1,4 +1,4 @@
-<header class="px-2">
+<header class="px-2" [class.dropShadow]="!hideShadow">
 <div class="d-flex justify-content-between align-items-center h-100">
     <div class="headerLogoHolder">
 
