--- a/projectStack/src/app/shared/header/header.component.scss
+++ b/projectStack/src/app/shared/header/header.component.scss
@@ -2,9 +2,12 @@ header{
   min-height: 50px;
   height: 9vh;
   background-color: #e25252;
-  box-shadow: 0px 2px 14px 0px rgba(0,0,0,0.2);
+
   position: relative;
   z-index: 2;
+}
+header.dropShadow{
+  box-shadow: 0px 2px 14px 0px rgba(0,0,0,0.2);
 }
 
 .headerLogoHolder{
